# quantrt

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
credentials/: coinbasepro.json
docker/: Dockerfile  docker-compose.yaml  postgres.conf  schema.sql
docker/quantrt.py-data/: postmaster.pid
docker/quantrt.py-data/base/1/: 2658  pg_internal.init  pg_internal.init.42
docker/quantrt.py-data/global/: 1262  pg_control  pg_internal.init
docker/quantrt.py-data/pg_stat/: db_0.stat  db_1.stat  global.stat
docker/quantrt.py-data/pg_stat_tmp/: db_0.stat  global.stat
logs/: quantrt-log-2021-09-06
src/: app.py
src/api/: __init__.py  auth.py  ws.py
src/common/: __init__.py  config.py  log.py  types.py
src/quantrt/algorithm/: miner.py  scanner.py  strategy.py
src/quantrt/api/: auth.py  rest.py  ws.py
src/quantrt/common/: config.py  lru.py  timescale.py  types.py
src/quantrt/models/: account.py  candle.py  indicator.py  order.py  portfolio.py
src/quantrt/strategy/: base.py
src/quantrt/util/: database.py  time.py
src/util/: __init__.py  database.py  schedule.py
test/api/: websocket_feed.py
