[metadata]
name = quantrt-aburke
version = 0.0.1
author = Arthur Miles Burke
author_email = amb556@cornell.edu
description = A package for quantitative reinforcement learning based trading
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ardieb/quantrt
project_urls =
    Bug Tracker = https://github.com/ardieb/quantrt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src